# gutt

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tasks.py
.github/workflows/: gutt-run-unittests.yml  python-run-unittests.yml
examples/my_awesome_package/: module1.py
examples/mytests/my_awesome_package/: test_module1.py
src/gutt/: _meta.py  code.py  model.py  template.py  utils.py
src/gutt/cli/: main.py
src/testgen/: code.py  parser.py  template.py  utils.py
src/testgen/cli/: main.py
testgen/: __init__.py  _meta.py  utils.py
testgen/cli/: main.py
tests/_autogen/gutt/: test__meta.py  test_code.py  test_utils.py
tests/_gutt/gutt/: test_model.py  test_parser.py  test_template.py  test_utils.py
tests/_gutt/gutt-/: test_utils.py
tests/_gutt/gutt-/cli/: test_main.py
tests/_gutt/gutt/cli/: test_main.py
tests/_gutt/gutt/gutt/: test_model.py  test_template.py  test_utils.py
tests/_gutt/gutt/gutt/cli/: test_main.py
tests/gutt/: test__meta.py  test_code.py  test_template.py
tests/testgen/: test_parser.py  test_utils.py
tests/testgen/cli/: test_main.py
