[tool.poetry]
name = "gutt"
version = "1.2.0"
description = "Auto generate unit test templates"
authors = ["Ryan <ryanchao2012@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ryanchao2012/gutt"

[tool.poetry.dependencies]
python = "^3.7"
black = "*"
click = "*"
isort = "*"
libcst = "*"
cattrs = "*"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
flake8 = "^3.9.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
jedi = "<0.18"
ipython = "^7.25.0"

[tool.poetry.scripts]
gutt = "gutt.cli.main:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
