[project]
name = "gutt"
version = "1.2.0"
description = "Auto generate unit test templates"
authors = [
    {name = "ryanchao2012", email = "ryanchao2012@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.7"

dependencies = [
    "libcst",
    "cattrs",
    "isort",
    "click",
    "black"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "invoke",
    "ipython",
]


[project.scripts]
gutt = "gutt.cli.main:main"